Commit: JWT Token Authentication implemented
