# swagger.yaml
@@ -1,6 +1,6 @@
 swagger: "2.0"
 info:
-  title: Fandoo-API
+  title: Fundoo-API
   description: API for the Fundoo App.
   version: 1.0.0
 host: localhost:3001
@@ -18,6 +18,10 @@ paths:
     get:
       tags:
         - "users"
+      parameters:
+        - name: x-auth-token
+          in: header
+          required: true
       summary: Returns a list of users.
       description: Optional extended description in Markdown.
       responses:
@@ -123,6 +127,9 @@ paths:
           in: "path"
           required: true
           description: The ID of the user to return.
+        - name: x-auth-token
+          in: header
+          required: true
           schema:
             type: string
             minimum: 1
@@ -163,8 +170,11 @@ paths:
         description: "id that need to be updated"
       - in: "body"
         name: "body"
-      description: "Updated user object"
-      required: true
+        description: "Updated user object"
+        required: true
+      - name: x-auth-token
+        in: header
+        required: true
       schema:
          type: object
           required:
@@ -208,6 +218,10 @@ paths:
     get:
       tags:
         - "notes"
+      parameters:
+        - name: x-auth-token
+          in: header
+          required: true
       summary: Returns a list of notes.
       description: Optional extended description in Markdown.
       responses:
@@ -223,6 +237,9 @@ paths:
           in: path
           required: true
           description: The ID of the note to return.
+        - name: x-auth-token
+          in: header
+          required: true
           schema:
             type: string
             minimum: 1
@@ -259,6 +276,9 @@ paths:
         - in: body
           name: req
           description: The note to create.
+        - name: x-auth-token
+          in: header
+          required: true
           schema:
             type: object
             required:
@@ -333,8 +353,11 @@ paths:
         description: "id that need to be updated"
       - in: "body"
         name: "body"
-      description: "Updated Note object"
-      required: true
+        description: "Updated Note object"
+        required: true
+      - name: x-auth-token
+        in: header
+        required: true
       schema:
         type: object
           required:
@@ -387,7 +410,10 @@ paths:
         description: "id that need to be updated"
       - in: "body"
         name: "body"
-      description: "Updated Note object"
+        description: "Updated Note object"
+      - name: x-auth-token
+        in: header
+        required: true
       required: true
       schema:
         type: object
@@ -435,7 +461,10 @@ paths:
         description: "id that need to be updated"
       - in: "body"
         name: "body"
-      description: "Updated Note object"
+        description: "Updated Note object"
+      - name: x-auth-token
+        in: header
+        required: true
       required: true
       schema:
         type: object
